force-app/main/default/objects/TIMBASURVEYS__QuestionToField__c/fields/TIMBASURVEYS__FieldLength__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__FieldLength__c</fullName>
    <label>FieldLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>