force-app/main/default/objects/TIMBASURVEYS__QuestionToField__c/fields/TIMBASURVEYS__FieldType__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__FieldType__c</fullName>
    <label>FieldType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>