force-app/main/default/objects/TIMBASURVEYS__QuestionToField__c/fields/TIMBASURVEYS__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>