force-app/main/default/objects/TIMBASURVEYS__QuestionToField__c/fields/TIMBASURVEYS__QuestionId__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__QuestionId__c</fullName>
    <label>QuestionId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>